<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textColor="#FFFFFF" 
        android:buttonTint="#FFFFFF"
    android:background="#000000"> 

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:textColor="#FFFFFF" 
        android:buttonTint="#FFFFFF"
        android:background="#000000">

        <Spinner
    android:id="@+id/SProfile"
    style="@style/ComboBox"
    android:layout_width="300dp"
    android:backgroundTint="#663AF7"
    android:popupBackground="#8D30FF"
    android:textColor="#FFFFFF" 
        android:buttonTint="#FFFFFF" /> 

        <ImageView
            android:id="@+id/BTSettings"
            android:layout_width="24dp"
            android:layout_height="28dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/icon_settings"
            app:tint="#FFFFFF"/> 
    </LinearLayout>

    <CheckBox
        android:id="@+id/CBShowTouchscreenControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/show_touchscreen_controls"
        android:textColor="#FFFFFF" 
        android:buttonTint="#FFFFFF"
        android:background="#000000"/> 

    <CheckBox
        android:id="@+id/CBTouchScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/enable_touch_screen"
        android:textColor="#FFFFFF"
        android:buttonTint="#FFFFFF"
        android:background="#000000"/>

    <CheckBox
        android:id="@+id/CBLockCursor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_cursor"
        android:textColor="#FFFFFF"
        android:buttonTint="#FFFFFF"
        android:background="#000000"/>
</LinearLayout>